[gd_scene load_steps=60 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://alien/alienGreen_walk1.png" type="Texture" id=2]
[ext_resource path="res://alien/alienGreen_walk2.png" type="Texture" id=3]
[ext_resource path="res://alien/alienGreen_stand.png" type="Texture" id=4]
[ext_resource path="res://alien/alienGreen_climb1.png" type="Texture" id=5]
[ext_resource path="res://alien/alienGreen_climb2.png" type="Texture" id=6]
[ext_resource path="res://alien/alienGreen_hurt.png" type="Texture" id=7]
[ext_resource path="res://alien/alienGreen_stand_oh.png" type="Texture" id=8]
[ext_resource path="res://alien/alienGreen_jump.png" type="Texture" id=9]
[ext_resource path="res://alien/alienGreen_duck.png" type="Texture" id=10]
[ext_resource path="res://sounds/jippee1.ogg" type="AudioStream" id=11]
[ext_resource path="res://sounds/ooooooh.ogg" type="AudioStream" id=12]
[ext_resource path="res://sounds/ehhh.ogg" type="AudioStream" id=13]
[ext_resource path="res://sounds/hmmm.ogg" type="AudioStream" id=14]
[ext_resource path="res://sounds/aj1.ogg" type="AudioStream" id=15]
[ext_resource path="res://sounds/aj2.ogg" type="AudioStream" id=16]
[ext_resource path="res://sounds/aj3.ogg" type="AudioStream" id=17]
[ext_resource path="res://alien/p2/alienYellow_stand.png" type="Texture" id=18]
[ext_resource path="res://alien/p2/alienYellow_walk1.png" type="Texture" id=19]
[ext_resource path="res://alien/p2/alienYellow_walk2.png" type="Texture" id=20]
[ext_resource path="res://alien/p2/alienYellow.png" type="Texture" id=21]
[ext_resource path="res://alien/p2/alienYellow_jump.png" type="Texture" id=22]
[ext_resource path="res://alien/p2/alienYellow_climb1.png" type="Texture" id=23]
[ext_resource path="res://alien/p2/alienYellow_climb2.png" type="Texture" id=24]
[ext_resource path="res://alien/p2/alienYellow_hurt.png" type="Texture" id=25]
[ext_resource path="res://alien/p2/alienYellow_duck.png" type="Texture" id=26]
[ext_resource path="res://alien/p3/alienPink_duck.png" type="Texture" id=27]
[ext_resource path="res://alien/p3/alienPink_climb2.png" type="Texture" id=28]
[ext_resource path="res://alien/p3/alienPink_climb1.png" type="Texture" id=29]
[ext_resource path="res://alien/p3/alienPink_hurt.png" type="Texture" id=30]
[ext_resource path="res://alien/p3/alienPink_jump.png" type="Texture" id=31]
[ext_resource path="res://alien/p3/alienPink_stand.png" type="Texture" id=32]
[ext_resource path="res://alien/p3/alienPink_walk1.png" type="Texture" id=33]
[ext_resource path="res://alien/p3/alienPink_walk2.png" type="Texture" id=34]
[ext_resource path="res://alien/p3/alienPink_swim1.png" type="Texture" id=35]
[ext_resource path="res://alien/p3/alienPink_swim2.png" type="Texture" id=36]
[ext_resource path="res://alien/p4/alienBeige_walk1.png" type="Texture" id=37]
[ext_resource path="res://alien/p4/alienBeige_walk2.png" type="Texture" id=38]
[ext_resource path="res://alien/p4/alienBeige_hurt.png" type="Texture" id=39]
[ext_resource path="res://alien/p4/alienBeige_climb2.png" type="Texture" id=40]
[ext_resource path="res://alien/p4/alienBeige_stand.png" type="Texture" id=41]
[ext_resource path="res://alien/p4/alienBeige_climb1.png" type="Texture" id=42]
[ext_resource path="res://alien/p4/alienBeige_duck.png" type="Texture" id=43]
[ext_resource path="res://alien/p4/alienBeige_jump.png" type="Texture" id=44]
[ext_resource path="res://alien/p5/alienBlue_climb1.png" type="Texture" id=45]
[ext_resource path="res://alien/p5/alienBlue_climb2.png" type="Texture" id=46]
[ext_resource path="res://alien/p5/alienBlue_hurt.png" type="Texture" id=47]
[ext_resource path="res://alien/p5/alienBlue.png" type="Texture" id=48]
[ext_resource path="res://alien/p5/alienBlue_walk1.png" type="Texture" id=49]
[ext_resource path="res://alien/p5/alienBlue_walk2.png" type="Texture" id=50]
[ext_resource path="res://alien/p5/alienBlue_stand.png" type="Texture" id=51]
[ext_resource path="res://alien/p5/alienBlue_duck.png" type="Texture" id=52]
[ext_resource path="res://alien/p5/alienBlue_jump.png" type="Texture" id=53]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "jump2",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ) ],
"loop": true,
"name": "stop3",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ) ],
"loop": true,
"name": "duck3",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ) ],
"loop": true,
"name": "talk3",
"speed": 5.0
}, {
"frames": [ ExtResource( 30 ) ],
"loop": true,
"name": "hit3",
"speed": 5.0
}, {
"frames": [ ExtResource( 45 ), ExtResource( 46 ) ],
"loop": true,
"name": "climb5",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "talk2",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 34 ) ],
"loop": true,
"name": "walk3",
"speed": 8.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "climb1",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "duck1",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ) ],
"loop": true,
"name": "hit2",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ) ],
"loop": true,
"name": "duck2",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "stop1",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "stop2",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "walk2",
"speed": 8.0
}, {
"frames": [ ExtResource( 42 ), ExtResource( 40 ) ],
"loop": true,
"name": "climb4",
"speed": 5.0
}, {
"frames": [ ExtResource( 43 ) ],
"loop": true,
"name": "duck4",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "hit1",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "talk1",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk1",
"speed": 8.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "climb2",
"speed": 5.0
}, {
"frames": [ ExtResource( 52 ) ],
"loop": true,
"name": "duck5",
"speed": 5.0
}, {
"frames": [ ExtResource( 47 ) ],
"loop": true,
"name": "hit5",
"speed": 5.0
}, {
"frames": [ ExtResource( 53 ) ],
"loop": true,
"name": "jump5",
"speed": 5.0
}, {
"frames": [ ExtResource( 41 ) ],
"loop": true,
"name": "talk4",
"speed": 5.0
}, {
"frames": [ ExtResource( 44 ) ],
"loop": true,
"name": "jump4",
"speed": 5.0
}, {
"frames": [ ExtResource( 37 ), ExtResource( 38 ) ],
"loop": true,
"name": "walk4",
"speed": 8.0
}, {
"frames": [ ExtResource( 41 ) ],
"loop": true,
"name": "stop4",
"speed": 5.0
}, {
"frames": [ ExtResource( 39 ) ],
"loop": true,
"name": "hit4",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "jump1",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 35 ), ExtResource( 36 ) ],
"loop": true,
"name": "jump3",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 28 ) ],
"loop": true,
"name": "climb3",
"speed": 5.0
}, {
"frames": [ ExtResource( 48 ) ],
"loop": true,
"name": "talk5",
"speed": 5.0
}, {
"frames": [ ExtResource( 51 ) ],
"loop": true,
"name": "stop5",
"speed": 5.0
}, {
"frames": [ ExtResource( 49 ), ExtResource( 50 ) ],
"loop": true,
"name": "walk5",
"speed": 5.0
} ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.00514139, 0.989717 )
colors = PoolColorArray( 0, 0, 0, 1, 1, 1, 1, 0, 0.0154242, 0.0154242, 0.0154242, 0.5 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.379395 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
initial_velocity = 1.0
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[node name="player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk5"

[node name="trail" type="Particles2D" parent="AnimatedSprite"]
emitting = false
amount = 6
one_shot = true
speed_scale = 1.15
explosiveness = 1.0
randomness = 0.16
process_material = SubResource( 6 )
texture = ExtResource( 10 )

[node name="Camera2D" type="Camera2D" parent="."]
rotating = true
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 11.5252, 46.7609, 18.4863, 46.053, 22.9484, 29.7427, 23.3702, 12.5903, 29.4157, 4.43583, 33.3648, -10.6288, 29.8375, -32.6809, 14.3722, -46.1779, -1.65544, -47.865, -15.1524, -44.7719, -28.9306, -31.8373, -31.964, -10.9204, -27.1029, 6.26355, -22.3227, 14.5586, -21.7603, 27.6338, -19.8586, 46.5249, -4.7566, 47.2328 )

[node name="CollisionPolygon2DDuck" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, 12.25 )
polygon = PoolVector2Array( 14.241, 22.5, 19.491, 22.5, 24.241, 22.75, 23.3702, 12.5903, 29.4157, 4.43583, 33.3648, -10.6288, 26.491, -30.75, 11.991, -43.75, -3.009, -44.75, -14.759, -42, -26.509, -30.75, -31.964, -10.9204, -27.1029, 6.26355, -22.3227, 14.5586, -18.509, 22.5, -9.259, 23.25, 5.741, 23.25 )
disabled = true

[node name="jippee" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "talk"

[node name="ooooh" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
bus = "talk"

[node name="ehhh" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
bus = "talk"

[node name="hmmm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
bus = "talk"

[node name="WaitAfterIdle" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="RecoverTimer" type="Timer" parent="."]

[node name="aj1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -5.0
bus = "talk"

[node name="aj2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -5.0
bus = "talk"

[node name="aj3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
volume_db = -5.0
bus = "talk"

[connection signal="timeout" from="WaitAfterIdle" to="." method="_on_WaitAfterIdle_timeout"]
[connection signal="timeout" from="RecoverTimer" to="." method="_on_RecoverTimer_timeout"]
